c22a, c22b, b21, b22 add to layout. need to create change prices for this tariffs

--- a/public/stylesheets/parts/_calc.css
+++ b/public/stylesheets/parts/_calc.css
@@ -135,6 +135,10 @@
 .wrapper .tariffc12a-wrapper,
 .wrapper .tariffc12b-wrapper,
 .wrapper .tariffc21-wrapper,
+.wrapper .tariffc22a-wrapper,
+.wrapper .tariffc22b-wrapper,
+.wrapper .tariffb21-wrapper,
+.wrapper .tariffb22-wrapper,
 .wrapper .intakec12ac12b,
 .wrapper .propositionc12ac12b,
 .wrapper .havePricesc12ac12b {
