--- a/public/stylesheets/parts/_calc.scss
+++ b/public/stylesheets/parts/_calc.scss
@@ -147,6 +147,10 @@
     .tariffc12a-wrapper,
     .tariffc12b-wrapper,
     .tariffc21-wrapper,
+    .tariffc22a-wrapper,
+    .tariffc22b-wrapper,
+    .tariffb21-wrapper,
+    .tariffb22-wrapper,
     .intakec12ac12b,
     .propositionc12ac12b,
     .havePricesc12ac12b {
