--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -375,6 +375,10 @@ body .wrapper .wrap-all-in-tariff .year2020-wrapper {
 body .wrapper .tariffc12a-wrapper,
 body .wrapper .tariffc12b-wrapper,
 body .wrapper .tariffc21-wrapper,
+body .wrapper .tariffc22a-wrapper,
+body .wrapper .tariffc22b-wrapper,
+body .wrapper .tariffb21-wrapper,
+body .wrapper .tariffb22-wrapper,
 body .wrapper .intakec12ac12b,
 body .wrapper .propositionc12ac12b,
 body .wrapper .havePricesc12ac12b {
