backend for all new tariifs ready

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -327,6 +327,8 @@ body .wrapper .change-price-panel {
   text-align: center;
   display: none;
   width: 700px;
+  height: 90vh;
+  overflow: scroll;
   transition: .5s;
 }
 
