--- a/public/stylesheets/parts/_calc.css
+++ b/public/stylesheets/parts/_calc.css
@@ -139,6 +139,7 @@
 .wrapper .tariffc21-wrapper,
 .wrapper .tariffc22a-wrapper,
 .wrapper .tariffc22b-wrapper,
+.wrapper .tariffb11-wrapper,
 .wrapper .tariffb21-wrapper,
 .wrapper .tariffb22-wrapper,
 .wrapper .intakec12ac12b,
