--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -379,6 +379,7 @@ body .wrapper .tariffc12b-wrapper,
 body .wrapper .tariffc21-wrapper,
 body .wrapper .tariffc22a-wrapper,
 body .wrapper .tariffc22b-wrapper,
+body .wrapper .tariffb11-wrapper,
 body .wrapper .tariffb21-wrapper,
 body .wrapper .tariffb22-wrapper,
 body .wrapper .intakec12ac12b,
