--- a/public/stylesheets/parts/_calc.scss
+++ b/public/stylesheets/parts/_calc.scss
@@ -151,6 +151,7 @@
     .tariffc21-wrapper,
     .tariffc22a-wrapper,
     .tariffc22b-wrapper,
+    .tariffb11-wrapper,
     .tariffb21-wrapper,
     .tariffb22-wrapper,
     .intakec12ac12b,
