add info about 35zl

--- a/public/stylesheets/parts/_calc.css
+++ b/public/stylesheets/parts/_calc.css
@@ -144,7 +144,8 @@
 .wrapper .tariffb22-wrapper,
 .wrapper .intakec12ac12b,
 .wrapper .propositionc12ac12b,
-.wrapper .havePricesc12ac12b {
+.wrapper .havePricesc12ac12b,
+.wrapper #info35zl {
   display: none;
 }
 
