--- a/public/stylesheets/parts/_calc.scss
+++ b/public/stylesheets/parts/_calc.scss
@@ -156,7 +156,8 @@
     .tariffb22-wrapper,
     .intakec12ac12b,
     .propositionc12ac12b,
-    .havePricesc12ac12b {
+    .havePricesc12ac12b,
+    #info35zl {
         display: none;
     }
 
