--- a/views/panel.pug
+++ b/views/panel.pug
@@ -114,3 +114,4 @@ block content
   script(src="/javascripts/smallparts/changetariffs.js")  
   script(src="/javascripts/smallparts/setToZero.js")
   script(src="/javascripts/tariffEngine.js") 
+  script(src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.debug.js" integrity="sha384-NaWTHo/8YCBYJ59830LTz/P4aQZK1sS0SneOgAvhsIl3zBu8r9RevNg5lHCHAuQ/" crossorigin="anonymous")
