--- a/views/table.pug
+++ b/views/table.pug
@@ -5,7 +5,7 @@ block content
   form(method='post')
     button(type='submit' class='logout-btn') Wyloguj
   h1(class='table-heading') E-Tablica 
-  div(class="christmas-time")
+  //- div(class="christmas-time")
     p(class="time-to") Wielkanoc za:
       span(class="days-christmas")
       span(class="hours-christmas")
