--- a/public/stylesheets/parts/stats.css
+++ b/public/stylesheets/parts/stats.css
@@ -15,7 +15,7 @@
 
 .stats-wrapper .cases-wrapper {
   padding: 10px;
-  width: 40%;
+  width: 50%;
   margin: 0 auto;
   border: 2px solid black;
   border-radius: 5px;
@@ -93,11 +93,11 @@
   background-color: rgba(255, 235, 59, 0.43);
 }
 
-.stats-wrapper .cases-wrapper #mail {
+.stats-wrapper .cases-wrapper #klient {
   background-color: rgba(1, 128, 1, 0.721);
 }
 
-.stats-wrapper .cases-wrapper #pd {
+.stats-wrapper .cases-wrapper #spotkanie {
   background-color: rgba(1, 128, 1, 0.921);
 }
 
