--- a/public/stylesheets/parts/stats.scss
+++ b/public/stylesheets/parts/stats.scss
@@ -15,7 +15,7 @@
 
     .cases-wrapper {
         padding: 10px;
-        width: 40%;
+        width: 50%;
         margin: 0 auto;
         border: 2px solid black;
         border-radius: 5px;
@@ -95,11 +95,11 @@
             background-color: rgba(255, 235, 59, 0.43)
         }
 
-        #mail {
+        #klient {
             background-color: rgba(1, 128, 1, 0.721);
         }
 
-        #pd {
+        #spotkanie {
             background-color: rgba(1, 128, 1, 0.921);
         }
 
