calc mwh from fv add without styles

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -14,7 +14,7 @@ html
         li
           a(href="/panel") Ofertomat                 
         li 
-          a(href="/panel/experts")  Handlowcy  
+          a(class="main-nav__new-link" href="/mwh")  Ile MWh?  
         li 
           a(href="/panel/table")  E-Tablica  
         li 
