--- a/views/layout.pug
+++ b/views/layout.pug
@@ -8,7 +8,7 @@ html
     script(src="https://kit.fontawesome.com/9d8f165f6b.js" crossorigin="anonymous")  
   body
     div(class="menu-mobile disabled")
-      i(class="far fa-caret-square-down")
+      img(src="images/menu_small.jpg", alt="")
     nav(class='main-nav') 
       ul
         li
@@ -42,3 +42,4 @@ html
      
     block content
 script(src="/javascripts/motive.js") 
+script(src="/javascripts/mobile.js") 
