--- a/views/panel.pug
+++ b/views/panel.pug
@@ -5,7 +5,7 @@ block content
     button(type='submit' class='logout-btn') Wyloguj  
   div(class='wrapper')
     h3 Ofertomat v. 2.1   
-    p(class="alert alert-success") v.2.1 Dodano B11 - dzięki Kalina. Na życzenie dodaje informacje o opłacie handlowej.  
+    p(class="alert alert-success wrapper__title") v.2.1 Dodano B11 - dzięki Kalina. Na życzenie dodaje informacje o opłacie handlowej.  
     button(class="btn btn-dark show-price-change") Edycja cen 
     div
       label(for="tariff") Grupa taryfowa:  
@@ -20,7 +20,7 @@ block content
         option(value="B21") B21                       
         option(value="B22") B22                       
     div
-      label(for="endOfAgreement") Kiedy kończy się umowa: 
+      label(for="endOfAgreement") Koniec umowy: 
       select(id="endOfAgreement")
         option(class="option-2021" value=2021) 2021
         option(class="option-2020" value=2020) 2020
