--- a/public/stylesheets/parts/_motive.css
+++ b/public/stylesheets/parts/_motive.css
@@ -9,6 +9,12 @@
   z-index: 2;
 }
 
+@media (max-width: 460px) {
+  .change-motive {
+    display: none;
+  }
+}
+
 .change-motive ul {
   list-style: none;
   margin-bottom: 0px;
