--- a/public/stylesheets/parts/_motive.scss
+++ b/public/stylesheets/parts/_motive.scss
@@ -1,3 +1,5 @@
+@import './breakepoints';
+
 .change-motive {
     position: fixed;
     height: 95px;
@@ -7,6 +9,10 @@
     background: rgba(0, 0, 0, 0.25);
     transition: .5s;
     z-index: 2;
+
+    @include mq('xsmall') {
+        display: none;
+    }
 
     ul {
         list-style: none;
@@ -46,6 +52,8 @@
                 transparent;
             font-weight: bolder;
             cursor: pointer;
+
+
         }
     }
 }
