--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -18,6 +18,12 @@ body {
   background-attachment: fixed;
 }
 
+@media (max-width: 640px) {
+  body {
+    background: linear-gradient(red, blue);
+  }
+}
+
 body .logout-btn {
   position: fixed;
   top: 5px;
@@ -109,8 +115,13 @@ body div.menu-mobile {
   height: 50px;
   position: fixed;
   right: 5px;
-  top: 5px;
+  bottom: 5px;
   z-index: 1;
+}
+
+body div.menu-mobile img {
+  width: 100%;
+  border-radius: 50%;
 }
 
 @media (max-width: 600px) {
@@ -239,6 +250,18 @@ body .main-nav ul li a.disabled {
   cursor: default;
 }
 
+body .main-nav.show {
+  top: 0px;
+  min-width: 50vw;
+  left: 40%;
+  background: rgba(64, 57, 57, 0.89);
+}
+
+body .main-nav.show a {
+  font-size: 20px;
+  color: orange;
+}
+
 body .wrapper {
   width: 800px;
   margin: 25px auto 0;
@@ -248,6 +271,37 @@ body .wrapper {
   box-shadow: 4px 4px black;
   font-size: 20px;
   font-family: Arial, sans-serif;
+}
+
+@media (max-width: 640px) {
+  body .wrapper {
+    max-width: 95vw;
+    position: absolute;
+    top: 50px;
+    left: 50%;
+    transform: translateX(-50%);
+    margin: 0 auto;
+  }
+}
+
+@media (max-width: 640px) {
+  body .wrapper__title {
+    display: none;
+  }
+}
+
+@media (max-width: 640px) {
+  body .wrapper .intakec11c21,
+  body .wrapper .propositionc11c21 {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+@media (max-width: 640px) {
+  body .wrapper .show-price-change {
+    display: none;
+  }
 }
 
 body .wrapper h3 {
@@ -294,6 +348,12 @@ body .wrapper div label {
 
 body .wrapper .btn-wrapper {
   text-align: center;
+}
+
+@media (max-width: 640px) {
+  body .wrapper .btn-wrapper {
+    margin-top: 10px;
+  }
 }
 
 body .wrapper .btn-wrapper #btnCalc {
@@ -954,6 +1014,12 @@ body .change-motive {
   background: rgba(0, 0, 0, 0.25);
   transition: .5s;
   z-index: 2;
+}
+
+@media (max-width: 640px) {
+  body .change-motive {
+    display: none;
+  }
 }
 
 body .change-motive ul {
