--- a/public/stylesheets/parts/_calc.css
+++ b/public/stylesheets/parts/_calc.css
@@ -230,6 +230,40 @@
   margin-top: 10px;
 }
 
+@media (max-width: 640px) {
+  .wrapper .wrap-checkbox {
+    margin-top: 10px;
+  }
+}
+
+@media (max-width: 640px) {
+  .wrapper .wrap-checkbox #onePriceForAll {
+    transform: scale(1.5);
+    width: 0px;
+    height: 0px;
+    vertical-align: super;
+  }
+}
+
 .wrapper .label-for-trade-fee {
   color: darkgreen;
+}
+
+.wrapper #activeCalcSavings {
+  display: none;
+}
+
+.wrapper .savings-note {
+  border-top: 2px solid gray;
+  padding: 5px;
+}
+
+.wrapper .savings-note p {
+  margin: 0px;
+  color: indianred;
+}
+
+.wrapper .savings-note p span {
+  font-weight: bolder;
+  color: green;
 }
