--- a/views/panel.pug
+++ b/views/panel.pug
@@ -5,7 +5,7 @@ block content
     button(type='submit' class='logout-btn') Wyloguj  
   div(class='wrapper')
     h3 Ofertomat v. 3.0   
-    p(class="alert alert-success wrapper__title") W wersji 3 ofertomat jest przygotowany pod TPA. Wylicza oszczędności klienta. Zaznacz checkbox i wpisz opłatę handlową.  
+    p(class="alert alert-success wrapper__title") W wersji 3 ofertomat jest przygotowany pod TPA. Wylicza oszczędności klienta.   
     button(class="btn btn-dark show-price-change") Edycja cen 
     div
       label(for="tariff") Grupa taryfowa:  
